@@ -1,3 +1,7 @@
+2016-10-24 Jimmy Petersson  <jimmy@molflow.com>
+
+	* runscript.m: Adapt to L2C.
+
 2016-10-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* Settings/q_meso.m:
